; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/misc/extr_adxl34x-i2c.c_adxl34x_smbus_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/misc/extr_adxl34x-i2c.c_adxl34x_smbus_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.i2c_client = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i8, i8)* @adxl34x_smbus_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adxl34x_smbus_write(%struct.device* %0, i8 zeroext %1, i8 zeroext %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i8, align 1
  %7 = alloca %struct.i2c_client*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store i8 %1, i8* %5, align 1
  store i8 %2, i8* %6, align 1
  %8 = load %struct.device*, %struct.device** %4, align 8
  %9 = call %struct.i2c_client* @to_i2c_client(%struct.device* %8)
  store %struct.i2c_client* %9, %struct.i2c_client** %7, align 8
  %10 = load %struct.i2c_client*, %struct.i2c_client** %7, align 8
  %11 = load i8, i8* %5, align 1
  %12 = load i8, i8* %6, align 1
  %13 = call i32 @i2c_smbus_write_byte_data(%struct.i2c_client* %10, i8 zeroext %11, i8 zeroext %12)
  ret i32 %13
}

declare dso_local %struct.i2c_client* @to_i2c_client(%struct.device*) #1

declare dso_local i32 @i2c_smbus_write_byte_data(%struct.i2c_client*, i8 zeroext, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
